Fix the whitespace error on line 31

--- a/main.css
+++ b/main.css
@@ -28,8 +28,7 @@ a {
   color: #505f79;
 }
 
-.none 
-{
+.none {
   display: none;
 }
 
